# openresa-bot

./: Dockerfile  Makefile  README.md  job_week.py  job_weekend.py  pyproject.toml  requirements.txt
.github/workflows/: cron_friday_saturday.yaml  cron_sunday_thursday.yml  cron_week.yml  cron_weekend.yml  main.yaml
bot/: bot_week.py  bot_weekend.py  config.py  gh_actions.py  jobs.py  openresa.py  utils.py
bot/.github/workflows/: main.yml
bot/jobs/: bot_week.py
examples/: run_apscheduler.py
jobs/: job_week.py  job_weekend.py
