[tool.poetry]
name = "openresa-bot"
version = "0.1.0"
description = "Reservation bot for the openresa website. Let's keep this secret. Contribution welcomed."
authors = ["DanaPointCapital"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.3"
APScheduler = "^3.10.1"

[tool.poetry.dev-dependencies]
mypy = "*"
perflint = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """

    {%- if dirty -%}
        {{ serialize_pep440(base, stage, revision, dev=distance, metadata=[commit]) }}
    {%- elif distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}

"""

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=openresa-bot --cov-report html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
